# attesta

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  attesta.yaml.example  package-lock.json  package.json
.claude/: settings.json
.github/: BRANCH_PROTECTION_CHECKLIST.md  dependabot.yml  pull_request_template.md
.rollback_backup_20260215_134340_2am/: package-lock.json  package.json
docs/: changelog.mdx  docs.json  faq.mdx  how-it-works.mdx  installation.mdx  introduction.mdx  oss-vs-cloud.mdx  quickstart-5-minutes.mdx  quickstart.mdx  style.css  support-policy.mdx  why-attesta.mdx
examples/: README.md
fixtures/: test-vectors.json
python/: CLAUDE.md  pyproject.toml
python/src/attesta/: __init__.py  environment.py  events.py  exporters.py  webhooks.py
python/src/attesta/challenges/: __init__.py  confirm.py  multi_party.py  quiz.py  teach_back.py  validators.py
python/src/attesta/cli/: __init__.py  main.py
python/src/attesta/config/: __init__.py  loader.py
python/src/attesta/core/: __init__.py  audit.py  audit_backend.py  gate.py  risk.py  trust.py  types.py
python/src/attesta/domains/: __init__.py  profile.py  scorer.py
python/src/attesta/domains/presets/: __init__.py  data_pipeline.py  devops.py
python/src/attesta/integrations/: __init__.py  anthropic.py  crewai.py  langchain.py  mcp.py  openai_sdk.py
python/src/attesta/renderers/: __init__.py  base.py  terminal.py  web.py
python/tests/: test_audit.py  test_config.py  test_domains.py  test_environment.py  test_events.py  test_exporters.py  test_gate.py  test_mcp.py  test_new_features.py  test_risk.py  test_security.py  test_trust.py  test_types.py  test_validators.py  test_web_renderer.py  test_webhooks.py
scripts/: benchmark_python.py  benchmark_typescript.mjs  check_release_boundary.sh  cut_release_candidate.sh  (+2 more)
(+141 files in other folders)
