[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attesta"
version = "0.1.0"
description = "Advanced Human-in-the-Loop for Agentic AI — Stop rubber-stamping. Start understanding."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Attesta Contributors" },
]
keywords = ["ai", "agents", "human-in-the-loop", "safety", "approval", "hitl", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]

# Zero required dependencies for core
dependencies = []

[project.optional-dependencies]
terminal = ["rich>=13.0"]
yaml = ["pyyaml>=6.0"]
langchain = ["langchain-core>=0.2"]
openai = ["openai>=1.0"]
crewai = ["crewai>=0.1"]
anthropic = ["anthropic>=0.25"]
all = [
    "rich>=13.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
attesta = "attesta.cli.main:main"

[project.urls]
Homepage = "https://github.com/KyberonAi/attesta"
Documentation = "https://attesta.dev"
Repository = "https://github.com/KyberonAi/attesta"
Issues = "https://github.com/KyberonAi/attesta/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/attesta"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
